1999-03-14  Sam Steingold  <sds@gnu.org>

	* stream.d: removed `stream_fd';
	moved `file_stat' and `user_data' here.
	* pathname.d: renamed `fehler_thing' to `fehler_pathname_descriptor'.
	export it, `as_file_stream', `fehler_file_stream_unnamed'.
	* socket.d (resolve_host_ipaddr): handle IPv6 addresses.

1999-03-14  Sam Steingold  <sds@gnu.org>

	OS_error() generates an error of type `os-error'.
	* erramiga.d, errdjgpp.d, errunix.d, errwin32.d (OS_error): use
	`simple_os_error'.
	* lispbibl.d (conditiontype): added `os_error'.
	* constsym.d: added `simple_os_error' symbol.
	* error.d: handle `simple_os_error'.
	* conditio.lsp: added `os-error' and `simple-os-error'.

1999-03-14  Bruno Haible  <bruno@linuix.math.u-bordeaux.fr>

        * lispbibl.d (strm_encoding): New macro.
        * stream.d (strm_encoding): Comment out.
        * encoding.d (SYS::[SET-]DEFAULT-FILE-ENCODING,
           SYS::[SET-]PATHNAME-ENCODING, SYS::[SET-]TERMINAL-ENCODING,
           SYS::[SET-]FOREIGN-ENCODING, SYS::[SET-]MISC-ENCODING): New
          functions.
        * init.lsp: Export *default-file-encoding*, *pathname-encoding*,
          *terminal-encoding*, *misc-encoding*.
        * places.lsp (*default-file-encoding*, *pathname-encoding*,
           *terminal-encoding*, *misc-encoding*): New settable symbol-macros.
        * foreign1.lsp (ffi:*foreign-encoding*): New settable symbol-macro.
        * affi1.lsp (affi:*foreign-encoding*): New settable symbol-macro.

1999-03-14  Bruno Haible  <bruno@linuix.math.u-bordeaux.fr>

        * defs2.lsp (define-symbol-macro, check-not-special-variable-p): Move
          to macros2.lsp.
        * macros2.lsp (define-symbol-macro, check-not-special-variable-p):
          Moved here from defs2.lsp.

1999-03-14  Bruno Haible  <bruno@linuix.math.u-bordeaux.fr>

        * stream.d (test_socket_server): New argument check_open. When it is
          TRUE, check that the handle is non-NIL.